--- a/landing-page.css
+++ b/landing-page.css
@@ -1,10 +1,9 @@
 body {
     margin: 0;
-    image-rendering: pixelated;
 }
 
 .header {
-    background-color: brown;
+    background-color: #1F2937;
     color: white;
 }
 
@@ -25,6 +24,7 @@ body {
 .nav {
     display: flex;
     padding: 16px;
+    font-size: 20px;
 }
 
 ul {
@@ -78,9 +78,11 @@ ul {
     margin-bottom: 8px;
     font-weight: bolder;
 }
-.upper-pra{
+
+.upper-pra {
     margin-bottom: 10px;
 }
+
 .upper-img {
     margin-left: auto;
     margin-right: 20%;
@@ -113,9 +115,10 @@ ul {
 }
 
 .content-img {
-    width: 200px;
-    height: 100px;
+    width: 150px;
+    height: 120px;
     border-radius: 8px;
+    border: 3px solid #3882F6;
 }
 
 .lower-content {
@@ -149,7 +152,7 @@ ul {
     justify-content: center;
     align-items: center;
     justify-items: center;
-    background-color: brown;
+    background-color: #3882F6;
     padding: 16px;
     margin: 48px;
     border-radius: 6px;
@@ -173,6 +176,10 @@ ul {
     padding: 8px 16px;
     border-color: transparent;
     border-radius: 8px;
+    background-color: transparent;
+    color: white;
+    border: 1px solid white;
+
 }
 
 p {
@@ -183,7 +190,7 @@ p {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: brown;
+    background-color: #1F2937;
     color: white;
     padding: 20px;
 }
